# nlp

./: ChangeLog  ChangeLog.v2  INSTALL  LICENSE  Makefile.in  README  TODO  configure
cap/: en.cap  hpbroy.cap  sdm.cap  sunbroy.cap
config/: Makefile  ac.h.in  acconfig.h  ach2acpl.in  aclocal.m4  config.sup  configure.in  mc.pl.in  sc.pl.in
contrib/: README
contrib/a2ps/: Makefile.in  README  a2ps.c  a2ps.h  a2ps.man  aclocal.m4  afm.c  afm.h  ansi.h  buffer.c  buffer.h  config.h.in  configure  configure.in  postscript.c  postscript.h  prescript.cat  prescript.man  report.c  report.h  routines.c  routines.h  styles.c  styles.c.in  styles.h
etc/: crunch  crunch.in  fixdist.cf  unrequire  unrequire.in
src/: Makefile.in  libCap.pl  libFile.pl  libGetopts.pl  libTerm.pl  libTime.pl  libUtil.pl  libVers.pl  modInfo.pl  modMain.pl  modNotify.pl  modPrint.pl  modQueue.pl  nlp.man.in  nlp.pl
src/prologue/: ps.duplex.off  ps.duplex.on  ps.ibmpw  ps.manualfeed.off  ps.manualfeed.on  ps.papertray.lower  ps.papertray.upper
test/: Makefile  Makefile.in  input-dvi.tex  input.dvi  input.ps  input.txt  output-01-txt.ps  output-02-txt-B.ps  output-03-txt-F4.ps  output-04-txt-w.ps  output-05-txt-l40.ps  output-06-txt-N.ps  output-07-txt-Hs.ps  output-08-txt-m.ps  output-09-txt-L.ps  output-10-txt-b.ps  output-11-txt-2.ps  output-12-txt-2b.ps  output-13-txt-L2.ps  output-14-txt-L2b.ps  output-15-txt-4.ps  output-16-txt-4b.ps  output-17-txt-L4.ps  output-18-txt-L4b.ps  output-19-dvi.ps  output-20-dvi-R600.ps  output-22-ps-L.ps  output-23-ps-b.ps  output-24-ps-2.ps  output-25-ps-2b.ps  output-26-ps-L2.ps  output-27-ps-L2b.ps  output-28-ps-4.ps  output-29-ps-4b.ps  output-30-ps-L4.ps  output-31-ps-L4b.ps  testnlp
